# Programming-Lang-Basics

./: (a.18#5)script_to_remove_an_item_from_a_set_if_it_is_present_in_the_set.py  auto_captcha_fill_experiment.py  requirements.txt  script_to_print_n_odd_natural_no.py
Cassignment/: CMakeLists.txt  README.md  second_program
Cassignment/C basic programs/: first_program.c  second_program.c  third_program.c
Cassignment/include/: program_to_count_all_the_duplicates_in_an_array.h  program_to_find_the_greatest_num_from_the_given_array.h  program_to_find_the_smallest_num_from_the_given_array.h  sum_of_two_numbers.h  write_2_func_one_to_print_hello_and_2nd_to_print_good_bye.h  write_a_func_that_prints_namaste_if_user_is_indian_and_bonjour_if_user_is_french.h  write_a_func_to_calculate_sum_of_all_the_elements_of_the_array.h
Cassignment/main/: main.c
LEETCODE SOLUTION/: notes_of_leetcode_solutions.py
OOPS NOTES/: 1.abstract method.py
PYTHON ASSIGNMENT/: (a.9#3)script_print_first_10_natural_no_in_reverse_order.py
SELENIUM DEMO/: conditional_commands& radio_buttons.py  explicit_wait.py  test_auto_using_selenium.py  text_vs_get_attribute.py
SELENIUM NOTES/: browser_commands.py  conditional_commands.py  navitional_commands.py  notes_of_selenium_tutorial.py  selenium_demo1.py  test_auto_using_selenium.py  xpath_selenium.py
SELENIUM_DEMO/: css_selector_demo.py  dropdown.py  find_element_vs_find_elements.py  text_vs_get_attribute.py
amazon_header/: index.html  style.css
assignment/: (2)script_to_print_first_n_natural_no.py  (4)script_to_print_all_prime_no_under_100.py  (+71 more)
(+32 files in other folders)
